// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI search index creation and data loading Search by geography should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": true,
    "name": "areaCode",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaName",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "areaType",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct index name and number of fields 1`] = `
[
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": true,
    "name": "indicatorId",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "name",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "definition",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": true,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "latestDataPeriod",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "dataSource",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.String",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
  {
    "analyzer": null,
    "dimensions": null,
    "facetable": false,
    "filterable": true,
    "indexAnalyzer": null,
    "key": false,
    "name": "lastUpdated",
    "retrievable": true,
    "searchAnalyzer": null,
    "searchable": false,
    "sortable": true,
    "stored": true,
    "synonymMaps": [],
    "type": "Edm.DateTimeOffset",
    "vectorEncoding": null,
    "vectorSearchProfile": null,
  },
]
`;

exports[`AI search index creation and data loading Search by indicator should have correct scoring profile configuration 1`] = `
[
  {
    "functionAggregation": null,
    "functions": [],
    "name": "BasicScoringProfile",
    "text": {
      "weights": {
        "definition": 5,
        "indicatorId": 20,
        "name": 10,
      },
    },
  },
]
`;
